SA.toIterator / IA.toList